--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     <h2>12. Contact</h2>
     <p>
-        If you have questions about this Privacy Policy, you may contact the developer at:
+        If you have questions about this Privacy Policy, you may contact the developer at: Krmcq94@gmail.com
     </p>
     <p>
         <strong>Developer:</strong> Kelly McQuilling<br>
